After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 697200 - GtkWindow: notify::attached-to not emitted
GtkWindow: notify::attached-to not emitted
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
3.8.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks: 692643
 
 
Reported: 2013-04-03 17:31 UTC by Sébastien Wilmet
Modified: 2013-04-03 17:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GtkWindow: fix notify of :attached-to (762 bytes, patch)
2013-04-03 17:32 UTC, Sébastien Wilmet
none Details | Review

Description Sébastien Wilmet 2013-04-03 17:31:46 UTC
gtk_window_set_attached_to() doesn't emit the notify signal on the :attached-to property.
Comment 1 Sébastien Wilmet 2013-04-03 17:32:28 UTC
Created attachment 240519 [details] [review]
GtkWindow: fix notify of :attached-to
Comment 2 Sébastien Wilmet 2013-04-03 17:49:18 UTC
Benjamin Otte (Company) has reviewed the patch on IRC.
The commit is pushed to the master branch.