GtkWindow: fix notify of :attached-to

https://bugzilla.gnome.org/show_bug.cgi?id=697200